Update document format (using TFA)

--- a/relazione.tex
+++ b/relazione.tex
@@ -37,9 +37,7 @@
 \AcademicYear{2019/2020}
 \copyyear{2020}
 \advisor{Prof. Chiara Petrioli}
-\tutor{Dr. Georgia Koutsandria}
-\tutorcoord{Prof. Chiara Petrioli}
-\tutorcoord{Dr. Georgia Koutsandria}
+\coadvisor{Dr. Georgia Koutsandria}
 \authoremail{emili.1802989@studenti.uniroma1.it}
 
 \begin{document}
