--- a/relazione.tex
+++ b/relazione.tex
@@ -645,7 +645,7 @@ del 5\% ed i risultati finali sono considerati come la media dei risultati indiv
         \includegraphics[width=1\linewidth]{latency_plot.png}
         \caption*{(b)}
     \end{minipage}
-    \caption{Comparazione fra i due protocolli: (a) l'overhead di rete e (b) le latenze sperimentate.}
+    \caption{Comparazione fra GREEN-WUP e la variante: (a) l'overhead di rete e (b) le latenze sperimentate.}
 \end{figure}
 
 Osservando la \textbf{Figura 4.1} è evidente che nella variante l'overhead diminuisce in quanto diminuisce il numero totale di pacchetti di controllo inviati
@@ -674,7 +674,7 @@ di selezione dei nodi disponibili (attraverso lo scambio di RTS/CTS) diminuisce,
         \includegraphics[width=1\linewidth]{pdr_plot.png}
         \caption*{(b)}
     \end{minipage}
-    \caption{Comparazione fra i due protocolli: (a) l'energia spesa dalla rete e (b) il packet delivery ratio.}
+    \caption{Comparazione fra GREEN-WUP e la variante: (a) l'energia spesa dalla rete e (b) il packet delivery ratio.}
 \end{figure}
 
 Analizzando la \textbf{Figura 4.2} si può notare come l'energia richiesta dalla rete è inferiore nel caso della variante. Come diretta conseguenza di quanto
@@ -686,11 +686,38 @@ modifica che permette ai nodi di scegliere se attivare o meno la radio principal
 da questa modifica ma anche dalla stessa applicazione di jitter che vengono calcolati a partire dallo stato dei nodi e che non sono puramente
 randomici come nel caso dell'implementazione originale di GREEN-WUP.\\
 
-Infine, è stata implementata anche la fase di interest dissemination sia per GREEN-WUP che per la variante. In questo caso, i costi energetici
-aggiuntivi richiesti da questa ulteriore fase possono essere considerati costanti in quanto essa viene eseguita solo inizialmente prima della
-fase di scambio dati. In effetti l'overhead energetico richiesto rimane costante al di sotto del joule per ciascun valore assunto da \emph{iaTime}. Per
-un riferimento grafico è possibile far riferimento alla Figura 4.2 (a) in quanto non apprezzabile l'overhead energetico rispetto alla versione
-senza interest dissemination.
+Infine, viene fornita un'implementazione della fase di interest dissemination sia per GREEN-WUP che per la variante proposta. Si noti come i consumi
+derivati dall'introduzione di questa fase siano inferiori in ordini di grandezza rispetto ai costi energetici dovuti al normale funzionamento della rete. Inoltre, per
+ragioni di efficienza durante l'implementazione di questa nuova fase si è scelto di distinguere i pacchetti \emph{DATA}, utilizzati durante la fase di scambio
+dati, dai pacchetti \emph{INTEREST}. Questo dettaglio implementativo garantisce che i pacchetti che realizzano la fase di interest dissemination
+possono essere scambiati solo all'inizio e se ricevuti successivamente saranno scartati.
+
+\begin{figure}[H]
+    \centering
+    \begin{minipage}{.5\textwidth}
+        \centering
+        \includegraphics[width=1\linewidth]{energy_plot.png}
+        \caption*{(a)}
+    \end{minipage}%
+    \begin{minipage}{.5\textwidth}
+        \centering
+        \includegraphics[width=1\linewidth]{interest_energy_plot.png}
+        \caption*{(b)}
+    \end{minipage}
+    \caption{Comparazione dei consumi energetici di GREEN-WUP e della variante: senza (a) e con (b) la fase di interest dissemination.}
+\end{figure}
+
+Osservando \textbf{Figura 4.3 (b)}, si può notare che i consumi energetici sono appena superiori rispetto alla versione senza la fase di interest dissemination
+\textbf{(a)}. In effetti, in tutte le sperimentazioni attuate l'overhead registrato è costantemente al di sotto del joule per ciascun
+valore assunto dal parametro $\emph{iaTime}=\{2,5,10,25,50\}$. In questo caso mostriamo solamente le variazioni energetiche causate dall'introduzione
+di questa fase in quanto gli hop count determinati coincidono con quelli stimati nella versione che non esegue questa fase.
+Conseguentemente anche le latenze sperimentate e le prestazioni della rete in generale, ad eccezione dell'energia spesa, rimangono inalterate.\\
+
+In generale i consumi energetici aggiuntivi richiesti da questa ulteriore fase possono essere considerati costanti in quanto essa viene eseguita soltanto una
+volta prima dell'inizio della fase di scambio dati. Si noti inoltre come i consumi energetici richiesti da questa fase aumentino al crescere del
+numero di ripetizioni dell'invio del command packet da parte del sink node.\\
+
+I risultati sopra mostrati fanno riferimento all'implementazione dell'algoritmo descritto in \textbf{Capitolo 3.2}.
 
 \chapter{Ottimizzazione dei parametri}
 
